Sat Oct 28 22:44:46 CEST 2006 (tk)
----------------------------------
  * libclamav/elf.c: parse program headers and properly calculate file offset
		     of entry point

Sat Oct 28 16:56:51 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Fix file descriptor leak when more than one email is
				sent on a connection.

Sat Oct 28 17:33:06 CEST 2006 (tk)
----------------------------------
  * libclamav/regex_list.c: .pdb/.wdb files now use colon as delimiter

Sat Oct 28 15:52:42 CEST 2006 (tk)
----------------------------------
  * libclamav/elf.c: make the code reentrant (closes bug#57)
		     Reported by Robert Allerstorfer <roal*anet.at>

Sat Oct 28 14:54:00 CEST 2006 (tk)
----------------------------------
  * libclamav/others.h: include clamav.h (closes bug#101)

Sat Oct 28 14:48:03 CEST 2006 (tk)
----------------------------------
  * clamd/session.c: MULTISCAN: handle inaccessible directories more gently
		     (closes bug#85)

Sat Oct 28 11:25:40 BST 2006 (njh)
----------------------------------
 * libclamav/pst.c:	Moved to experimental mode

Fri Oct 27 15:06:53 BST 2006 (njh)
----------------------------------
 * libclamav/js.[ch]:	Renamed to jscript.[ch] at the request of TK

Fri Oct 27 02:37:49 CEST 2006 (acab)
------------------------------------
  * libclamav/petite.c: sanity check the number of rebuilt sections

Wed Oct 25 18:03:34 CEST 2006 (tk)
----------------------------------
  * sigtool/sigtool.c: new option --utf16-decode

Wed Oct 25 17:39:24 CEST 2006 (tk)
----------------------------------
  * libclamav: add support for UTF16 encoded HTML files,
	       requested by Christoph

Wed Oct 25 12:40:10 CEST 2006 (acab)
------------------------------------
  * clamscan/clamscan.c: fix typo breaking -l (closes bug#83)
			 reported by Yaniv Kaul <ykaul * zone.checkpoint.com>

Wed Oct 25 04:30:36 CEST 2006 (acab)
------------------------------------
  * libclamav: add support for NsPack (--enable-experimental)
  