@@ -70,6 +70,7 @@ static struct option clamscan_longopt[] = {
     {"block-encrypted", 0, 0, 0},
     {"block-max", 0, 0, 0},
     {"no-pe", 0, 0, 0},
+    {"no-elf", 0, 0, 0},
     {"no-ole2", 0, 0, 0},
     {"no-html", 0, 0, 0},
     {"mbox", 0, 0, 'm'},	    /* not used */
