@@ -85,6 +85,9 @@ In some cases (eg. complex malware, exploits in graphic files, and others), Clam
 \fB\-\-no\-pe\fR
 PE stands for Portable Executable \- it's an executable file format used in all 32\-bit versions of Windows operating systems. By default ClamAV performs deeper analysis of executable files and attempts to decompress popular executable packers such as UPX, Petite, and FSG. This option \fBdisables\fR PE support and should be used with care!
 .TP 
+\fB\-\-no\-elf\fR
+Executable and Linking Format is a standard format for UN*X executables. This option \fBdisables\fR ELF support.
+.TP 
 \fB\-\-no\-ole2\fR
 Disable support for Microsoft Office document files.
 .TP 
