@@ -180,8 +180,13 @@ LocalSocket /tmp/clamd
 # Default: yes
 #ScanPE yes
 
-# With this option clamav will try to detect broken executables and mark
-# them as Broken.Executable
+# Executable and Linking Format is a standard format for UN*X executables.
+# This option allows you to control the scanning of ELF files.
+# Default: yes
+#ScanELF yes
+
+# With this option clamav will try to detect broken executables (both PE and
+# ELF) and mark them as Broken.Executable.
 # Default: no
 #DetectBrokenExecutables yes
 
