@@ -90,7 +90,8 @@ extern "C"
 #define CL_SCAN_BLOCKMAX	256
 #define CL_SCAN_ALGO		512
 #define CL_SCAN_NOPHISHING      1024
-#define CL_PHISH_NO_DOMAINLIST    4096
+#define CL_PHISH_NO_DOMAINLIST  4096
+#define CL_SCAN_ELF		8192
 
 /* recommended options */
 #define CL_SCAN_STDOPT		(CL_SCAN_ARCHIVE | CL_SCAN_MAIL | CL_SCAN_OLE2 | CL_SCAN_HTML | CL_SCAN_PE | CL_SCAN_ALGO) 
